bad/assign_field_bool_of_field_null.example_compiler_output
ERROR
[1mbad/assign_field_bool_of_field_null.lat:10:16: [1;31merror: [0;1massigning to `boolean` from incompatible type `null`[m
	(new D).c.fld = null;
	              [1;32m^[m
